<?xml version="1.0"?>
<package format="2">
  <name>rospy_wrapper</name>
  <version>0.0.0</version>
  <description>The rospy_wrapper package</description>

  <maintainer email="sean@hackett.pw">Sean Hackett</maintainer>
  <license>MIT</license>
  <url type="repository">http://github.com/sean-hackett/rospy-wrapper</url>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <test_depend>std_msgs</test_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
